5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4515/executions/1668_2973.log
== TEST (2019-04-15 18:24:06) 
-- CODE:

pinicial   = int(input("Posicao Inicial metros :"))
velocidade = int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

pfinal = pinicial+(velocidade*tdeslocamento)

print(pfinal)

if(pfinal > 100):
	print("ACIMA")
else:
	print("OK")
	

-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:24:31) 
-- CODE:

pinicial   = int(input("Posicao Inicial metros :"))
velocidade = int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

pfinal = pinicial+(velocidade*tdeslocamento)

print(pfinal)

if(pfinal > 100):
	print("ACIMA")
else:
	print("OK")
	

-- EXECUTION TIME:
0.17269
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:25:31) 
-- CODE:

pinicial   = int(input("Posicao Inicial metros :"))
velocidade = int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

pfinal = pinicial+(velocidade*tdeslocamento)

if(pfinal > 100):
	print(pfinal)
	print("ACIMA")
else:
	print(pfinal)
	print("OK")
	

-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:25:56) 
-- CODE:

pinicial   = int(input("Posicao Inicial metros :"))
velocidade = int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

pfinal = pinicial+(velocidade*tdeslocamento)

if(pfinal > 100):
	print(pfinal)
	print("ACIMA")
else:
	print(pfinal)
	print("OK")
	

-- EXECUTION TIME:
0.11504
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:26:15) 
-- CODE:
pinicial   = int(input("Posicao Inicial metros :"))
velocidade = int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

pfinal = pinicial+(velocidade*tdeslocamento)

if(pfinal > 100):
	print(pfinal)
	print("ACIMA")
else:
	print(pfinal)
	print("OK")
	

-- EXECUTION TIME:
0.131492
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:28:22) 
-- CODE:
pinicial   =    int(input("Posicao Inicial metros :"))
velocidade =    int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

pfinal = pinicial+(velocidade*tdeslocamento)

if(pfinal > 100):
	print(round(pfinal,1))
	print("ACIMA")
else:
	print(round(pfinal,1))
	print("OK")
	

-- EXECUTION TIME:
0.24288
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:28:24) 
-- CODE:
pinicial   =    int(input("Posicao Inicial metros :"))
velocidade =    int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

pfinal = pinicial+(velocidade*tdeslocamento)

if(pfinal > 100):
	print(round(pfinal,1))
	print("ACIMA")
else:
	print(round(pfinal,1))
	print("OK")
	

-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:28:48) 
-- CODE:
pinicial   =    int(input("Posicao Inicial metros :"))
velocidade =    int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

pfinal = pinicial+(velocidade*tdeslocamento)

if(pfinal > 100):
	print(round(pfinal,1))
	print("ACIMA")
else:
	print(round(pfinal,1))
	print("OK")
	

-- EXECUTION TIME:
0.175509
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:33:35) 
-- CODE:
pinicial   =    int(input("Posicao Inicial metros :"))
velocidade =    int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

percurso = pinicial+(velocidade*tdeslocamento)

if(velocidade > 100):
	print(pfinal)
	print("ACIMA")
else:
	print(pfinal)
	print("OK")
	

-- EXECUTION TIME:
0.117829
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2973/main.py", line 11, in <module>
    print(pfinal)
NameError: name 'pfinal' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:33:39) 
-- CODE:
pinicial   =    int(input("Posicao Inicial metros :"))
velocidade =    int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

percurso = pinicial+(velocidade*tdeslocamento)

if(velocidade > 100):
	print(pfinal)
	print("ACIMA")
else:
	print(pfinal)
	print("OK")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(pfinal)
NameError: name 'pfinal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:34:21) 
-- CODE:
pinicial   =    int(input("Posicao Inicial metros :"))
velocidade =    int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

percurso = pinicial+(velocidade*tdeslocamento)

if(velocidade > 100):
	print(percurso)
	print("ACIMA")
else:
	print(percurso)
	print("OK")
	

-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:34:37) 
-- CODE:
pinicial   =    int(input("Posicao Inicial metros :"))
velocidade =    int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

percurso = pinicial+(velocidade*tdeslocamento)

if(velocidade > 100):
	print(percurso)
	print("ACIMA")
else:
	print(percurso)
	print("OK")
	

-- EXECUTION TIME:
0.16939
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:35:29) 
-- CODE:
pinicial   =    int(input("Posicao Inicial metros :"))
velocidade =    int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

percurso = pinicial+(velocidade*tdeslocamento)

print(percurso)

if(velocidade > 100):
	print("ACIMA")
else:
	print("OK")
	

-- EXECUTION TIME:
0.295993
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:35:37) 
-- CODE:
pinicial   =    int(input("Posicao Inicial metros :"))
velocidade =    int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

percurso = pinicial+(velocidade*tdeslocamento)

print(percurso)

if(velocidade > 100):
	print("ACIMA")
else:
	print("OK")
	

-- EXECUTION TIME:
0.141716
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:35:44) 
-- CODE:
pinicial   =    int(input("Posicao Inicial metros :"))
velocidade =    int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

percurso = pinicial+(velocidade*tdeslocamento)

print(percurso)

if(velocidade > 100):
	print("ACIMA")
else:
	print("OK")
	

-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:36:04) 
-- CODE:
pinicial   =    int(input("Posicao Inicial metros :"))
velocidade =    int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

percurso = pinicial+(velocidade*tdeslocamento)

print(percurso)

if(velocidade > 100):
	print("ACIMA")
else:
	print("OK")
	

-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:36:29) 
-- CODE:
pinicial   =    int(input("Posicao Inicial metros :"))
velocidade =    int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

percurso = pinicial+(velocidade*tdeslocamento)

print(percurso)

if(velocidade > 100):
	print("ACIMA")
else:
	print("OK")
	

-- EXECUTION TIME:
0.166026
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:36:31) 
-- CODE:
pinicial   =    int(input("Posicao Inicial metros :"))
velocidade =    int(input("Velocidade metros/seg  :")) 
tdeslocamento = int(input("Tempo do deslocamento segundos :"))

percurso = pinicial+(velocidade*tdeslocamento)

print(percurso)

if(velocidade > 100):
	print("ACIMA")
else:
	print("OK")
	

-- EXECUTION TIME:
0.142745
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
